<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white_gradient"
    android:id="@+id/register_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_header1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/personal_info_title"
            android:textSize="@dimen/header_size"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/register_fname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_header1"
            android:inputType="text"
            android:hint="@string/first_name_hint"
            android:textColor="@color/edit_text_grey"
            android:textSize="@dimen/p_size"/>

        <EditText
            android:id="@+id/register_lname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_fname_edit_text"
            android:inputType="text"
            android:hint="@string/last_name_hint"
            android:textColor="@color/edit_text_grey"
            android:textSize="@dimen/p_size"/>

        <TextView
            android:id="@+id/register_header2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/register_lname_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/security_title"
            android:textSize="@dimen/header_size"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/register_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_header2"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColor="@color/edit_text_grey"
            android:textSize="@dimen/p_size"/>

        <EditText
            android:id="@+id/register_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_email_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColor="@color/edit_text_grey"
            android:textSize="@dimen/p_size"/>

        <TextView
            android:id="@+id/register_gift_card_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/register_password_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/have_gift_card_label"
            android:textSize="@dimen/p_size"
            android:textColor="@color/starbucksGreen"/>

        <TextView
            android:id="@+id/register_p1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/register_gift_card_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/gift_card_info_label"
            android:textSize="@dimen/tag_size"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/register_header3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/register_p1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/preference_terms_title"
            android:textSize="@dimen/header_size"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/register_checkbox1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/register_header3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/preference_terms_label1"
            android:textSize="@dimen/p_size"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/register_checkbox2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/register_checkbox1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/preference_terms_label2"
            android:textColor="@color/black"
            android:textSize="@dimen/p_size"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_checkbox2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/header_size"
            android:text="@string/join_now_label"
            android:background="@color/starbucksGreen"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>