<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/black_gradient"
    android:id="@+id/forgotpw_view">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/forgotpw_starbucks_logo_img"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/starbucks_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/forgotpw_header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/forgotpw_starbucks_logo_img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAlignment="center"
            android:text="@string/forgot_pw_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/header_size" />

        <TextView
            android:id="@+id/forgotpw_p1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/forgotpw_header1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/forgot_pw_instructions"
            android:textColor="@color/decaf_brown"
            android:textStyle="bold"
            android:textAllCaps="true"/>


        <EditText
            android:id="@+id/forgotpw_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/forgotpw_p1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/p_size"/>

        <EditText
            android:id="@+id/forgotpw_pw_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/forgotpw_email_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/p_size"/>

        <EditText
            android:id="@+id/forgotpw_confirm_pw_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/forgotpw_pw_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:inputType="textPassword"
            android:hint="@string/confirm_pw_hint"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="@dimen/p_size"/>

        <Button
            android:id="@+id/forgotpw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/forgotpw_confirm_pw_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/decaf_brown"
            android:text="@string/change_pw"
            android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>